--- a/sukha restorent/index.html
+++ b/sukha restorent/index.html
@@ -9,6 +9,7 @@
     <style>
         /* Custom CSS styles (as requested) */
         body {
+            <h1>Welcome to Sukha restaurant</h1>
             font-family: 'Inter', sans-serif;
             background-color: #f4f7f6;
         }
@@ -308,5 +309,6 @@
         }
     </script src="index.js"></script>
 </body>
+
 
 </html>
