--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
     <p>© 2025 Sukha Restaurant | Online Delivery Available 🚚</p>
   </footer>
 
+
+
+
+  <!-- WhatsApp Order Button -->
+<div class="whatsapp-btn">
+  <a href="https://wa.me/91+7670922811?text=Hello%20Sukha%20Restaurant!%20I%20want%20to%20place%20an%20order." target="_blank">
+    💬 Order on WhatsApp
+  </a>
+</div>
+
+<script src="script.js"></script>
+</body>
+</html>
+
   <script src="script.js"></script>
 </body>
 </html>
+
