--- a/index.html
+++ b/index.html
@@ -12,23 +12,30 @@
     <p>Delicious Food & Fast Online Delivery</p>
   </header>
 
-  <section class="menu">
-    <h2>Our Menu</h2>
+  <section id="menu" class="menu">
+  <h2>Our Menu</h2>
+  <div class="menu-items">
     <div class="menu-item">
+      <img src="images/chicken-biryani.jpg" alt="Chicken Biryani">
       <h3>Chicken Biryani</h3>
       <p>₹180</p>
-      <button onclick="order('Chicken Biryani')">Order Now</button>
+      <button>Order Now</button>
     </div>
+
     <div class="menu-item">
+      <img src="images/paneer-butter-masala.jpg" alt="Paneer Butter Masala">
       <h3>Paneer Butter Masala</h3>
       <p>₹150</p>
-      <button onclick="order('Paneer Butter Masala')">Order Now</button>
+      <button>Order Now</button>
     </div>
+
     <div class="menu-item">
+      <img src="images/veg-fried-rice.jpg" alt="Veg Fried Rice">
       <h3>Veg Fried Rice</h3>
       <p>₹120</p>
-      <button onclick="order('Veg Fried Rice')">Order Now</button>
+      <button>Order Now</button>
     </div>
+  </div>
   </section>
 
   <footer>
@@ -52,4 +59,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
