--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <h2>Our Menu</h2>
   <div class="menu-items">
     <div class="menu-item">
-      <img src="images/chicken-biryani.jpg" alt="Chicken Biryani">
-      <h3>Chicken Biryani</h3>
+      
+<!-- Chicken Biryani -->
+<img src="https://cdn.pixabay.com/photo/2021/09/20/05/40/biryani-6640665_1280.jpg" alt="Chicken Biryani">
       <p>₹180</p>
       <button>Order Now</button>
     </div>
@@ -59,5 +60,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
