--- a/index.html
+++ b/index.html
@@ -13,53 +13,47 @@
   </header>
 
   <section id="menu" class="menu">
-  <h2>Our Menu</h2>
-  <div class="menu-items">
-    <div class="menu-item">
+    <h2>Our Menu</h2>
+    <div class="menu-items">
       
-<!-- Chicken Biryani -->
-<img src="https://cdn.pixabay.com/photo/2021/09/20/05/40/biryani-6640665_1280.jpg" alt="Chicken Biryani">
-      <p>₹180</p>
-      <button>Order Now</button>
-    </div>
+      <!-- Chicken Biryani -->
+      <div class="menu-item">
+        <img src="https://cdn.pixabay.com/photo/2021/09/20/05/40/biryani-6640665_1280.jpg" alt="Chicken Biryani">
+        <h3>Chicken Biryani</h3>
+        <p>₹180</p>
+        <button>Order Now</button>
+      </div>
 
-    <div class="menu-item">
-      <img src="images/paneer-butter-masala.jpg" alt="Paneer Butter Masala">
-      <h3>Paneer Butter Masala</h3>
-      <p>₹150</p>
-      <button>Order Now</button>
-    </div>
+      <!-- Paneer Butter Masala -->
+      <div class="menu-item">
+        <img src="https://cdn.pixabay.com/photo/2022/03/02/14/08/paneer-butter-masala-7044903_1280.jpg" alt="Paneer Butter Masala">
+        <h3>Paneer Butter Masala</h3>
+        <p>₹150</p>
+        <button>Order Now</button>
+      </div>
 
-    <div class="menu-item">
-      <img src="images/veg-fried-rice.jpg" alt="Veg Fried Rice">
-      <h3>Veg Fried Rice</h3>
-      <p>₹120</p>
-      <button>Order Now</button>
+      <!-- Veg Fried Rice -->
+      <div class="menu-item">
+        <img src="https://cdn.pixabay.com/photo/2018/02/17/21/53/fried-rice-3165765_1280.jpg" alt="Veg Fried Rice">
+        <h3>Veg Fried Rice</h3>
+        <p>₹120</p>
+        <button>Order Now</button>
+      </div>
+
     </div>
-  </div>
   </section>
 
   <footer>
     <p>© 2025 Sukha Restaurant | Online Delivery Available 🚚</p>
   </footer>
 
-
-
-
   <!-- WhatsApp Order Button -->
-<div class="whatsapp-btn">
-  <a href="https://wa.me/91+7670922811?text=Hello%20Sukha%20Restaurant!%20I%20want%20to%20place%20an%20order." target="_blank">
-    💬 Order on WhatsApp
-  </a>
-</div>
-
-<script src="script.js"></script>
-</body>
-</html>
+  <div class="whatsapp-btn">
+    <a href="https://wa.me/917670922811?text=Hello%20Sukha%20Restaurant!%20I%20want%20to%20place%20an%20order." target="_blank">
+      💬 Order on WhatsApp
+    </a>
+  </div>
 
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
