--- a/index.html
+++ b/index.html
@@ -8,24 +8,31 @@
 </head>
 <body>
   <header>
-    <h1>🍽 Sukha Restaurant</h1>
-    <p>Delicious food, delivered to your door!</p>
+    <h1>🍴 Sukha Restaurant</h1>
+    <p>Delicious Food & Fast Online Delivery</p>
   </header>
 
   <section class="menu">
     <h2>Our Menu</h2>
-    <ul>
-      <li>Veg Biryani - ₹120 <button onclick="order('Veg Biryani')">Order</button></li>
-      <li>Paneer Butter Masala - ₹150 <button onclick="order('Paneer Butter Masala')">Order</button></li>
-      <li>Chicken Biryani - ₹180 <button onclick="order('Chicken Biryani')">Order</button></li>
-      <li>Cold Coffee - ₹80 <button onclick="order('Cold Coffee')">Order</button></li>
-    </ul>
+    <div class="menu-item">
+      <h3>Chicken Biryani</h3>
+      <p>₹180</p>
+      <button onclick="order('Chicken Biryani')">Order Now</button>
+    </div>
+    <div class="menu-item">
+      <h3>Paneer Butter Masala</h3>
+      <p>₹150</p>
+      <button onclick="order('Paneer Butter Masala')">Order Now</button>
+    </div>
+    <div class="menu-item">
+      <h3>Veg Fried Rice</h3>
+      <p>₹120</p>
+      <button onclick="order('Veg Fried Rice')">Order Now</button>
+    </div>
   </section>
 
-  <section id="order-status"></section>
-
   <footer>
-    <p>© 2025 Sukha Restaurant | Online Delivery Available</p>
+    <p>© 2025 Sukha Restaurant | Online Delivery Available 🚚</p>
   </footer>
 
   <script src="script.js"></script>
