--- a/index.html
+++ b/index.html
@@ -11,26 +11,37 @@
     <h1>🍴 Sukha Restaurant</h1>
     <p>Delicious Food & Fast Online Delivery</p>
   </header>
+<section id="menu" class="menu">
+  <h2>Our Menu</h2>
+  <div class="menu-items">
 
-  <section class="menu">
-    <h2>Our Menu</h2>
+    <!-- Chicken Biryani -->
     <div class="menu-item">
+      <img src="https://cdn.pixabay.com/photo/2021/09/20/05/40/biryani-6640665_1280.jpg" alt="Chicken Biryani">
       <h3>Chicken Biryani</h3>
       <p>₹180</p>
-      <button onclick="order('Chicken Biryani')">Order Now</button>
+      <button>Order Now</button>
     </div>
+
+    <!-- Paneer Butter Masala -->
     <div class="menu-item">
+      <img src="https://cdn.pixabay.com/photo/2023/03/25/09/19/paneer-butter-masala-7876410_1280.jpg" alt="Paneer Butter Masala">
       <h3>Paneer Butter Masala</h3>
       <p>₹150</p>
-      <button onclick="order('Paneer Butter Masala')">Order Now</button>
+      <button>Order Now</button>
     </div>
+
+    <!-- Veg Fried Rice -->
     <div class="menu-item">
+      <img src="https://cdn.pixabay.com/photo/2021/01/26/07/43/fried-rice-5951182_1280.jpg" alt="Veg Fried Rice">
       <h3>Veg Fried Rice</h3>
       <p>₹120</p>
-      <button onclick="order('Veg Fried Rice')">Order Now</button>
+      <button>Order Now</button>
     </div>
-  </section>
 
+  </div>
+</section>
+  
   <footer>
     <p>© 2025 Sukha Restaurant | Online Delivery Available 🚚</p>
   </footer>
@@ -38,3 +49,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
