--- a/index.html
+++ b/index.html
@@ -39,6 +39,29 @@
 
   </div>
 </section>
+  <section id="order">
+  <h2>Place Your Order 🍽</h2>
+  <form id="orderForm">
+    <label for="name">Full Name:</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="phone">Phone Number:</label>
+    <input type="tel" id="phone" name="phone" required>
+
+    <label for="food">Select Your Dish:</label>
+    <select id="food" name="food" required>
+      <option value="">-- Choose Dish --</option>
+      <option value="Chicken Biryani">Chicken Biryani</option>
+      <option value="Paneer Butter Masala">Paneer Butter Masala</option>
+      <option value="Veg Fried Rice">Veg Fried Rice</option>
+    </select>
+
+    <label for="location">Your Location:</label>
+    <input type="text" id="location" name="location" placeholder="Fetching your location..." required readonly>
+
+    <button type="submit" id="orderBtn">Order Now on WhatsApp</button>
+  </form>
+</section>
   <footer>
     <p>© 2025 Sukha Restaurant | Online Delivery Available 🚚</p>
   </footer>
@@ -46,6 +69,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
