--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
       <option value="Veg Fried Rice">Veg Fried Rice</option>
     </select>
 
+    
+   <input type="text" id="dish" placeholder="Selected Dish" readonly>
     <label for="location">Your Location:</label>
-    <input type="text" id="location" name="location" placeholder="Fetching your location..." required readonly>
+    <input type="text" id="location"
+      placeholder="Fetching your location..."required reandonly>
 
     <button type="submit" id="orderBtn">Order Now on WhatsApp</button>
   </form>
@@ -75,6 +78,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
