--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   </div>
 </section>
-  <section id="order">
+  <section id="scrolltoOrder">
   <h2>Place Your Order 🍽</h2>
   <form id="orderForm">
     <label for="name">Full Name:</label>
@@ -77,6 +77,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
